--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.30.0",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
+    "sass-embedded": "^1.80.6",
+    "tailwindcss": "^3.4.14",
     "vite": "^5.4.10"
   }
 }
