--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.12"
+    "vue": "^3.5.12",
+    "vue-meta": "^3.0.0-alpha.10"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
