--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "vue": "^3.5.12",
-    "vue-meta": "^3.0.0-alpha.10"
+    "vue-meta": "^3.0.0-alpha.10",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
