--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/motion": "^2.2.6",
     "uuid": "^11.0.3",
     "vue": "^3.5.12",
     "vue-meta": "^3.0.0-alpha.10",
