--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vueuse/motion": "^2.2.6",
+    "pinia": "^2.2.6",
     "uuid": "^11.0.3",
     "vue": "^3.5.12",
     "vue-meta": "^3.0.0-alpha.10",
