--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vueuse/motion": "^2.2.6",
+    "html2canvas": "^1.4.1",
     "pinia": "^2.2.6",
     "uuid": "^11.0.3",
     "vue": "^3.5.12",
