--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "uuid": "^11.0.3",
     "vue": "^3.5.12",
     "vue-meta": "^3.0.0-alpha.10",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vuetify": "^3.7.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
