--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "@vueuse/motion": "^2.2.6",
     "html2canvas": "^1.4.1",
     "pinia": "^2.2.6",
